# the-designer

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/commands/: designer.md
knowledge/: anti_patterns.md  canvas_scaling_cheatsheet.md  cinematic_video_layout.md  color_theory.md  component_registry.md  design_laws.md  design_qa.md  design_system_tokens.md  emotion_design_matrix.md  layout_composition.md  prototype_reference_library.md  visual_psychology.md
src/designer/: __init__.py  agent.py  color_utils.py  models.py  prompts.py  tools.py  validator.py
tests/: conftest.py  test_color_utils.py  test_cross_validation.py  test_models.py  test_new_validators.py  test_tools_and_agent.py  test_validator.py
